--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cyberbox/adminlte-twig-templates",
+    "name": "cyberbox/twig-templates",
     "type": "templates",
     "description": "Twig tempaltes for AdminLTE",
     "keywords": ["Twig","AdminLTE","templates"],
